Changes to support latest Arduino. Increased default buffer size to handle larger frames.

--- a/arduino_uip/library.properties
+++ b/arduino_uip/library.properties
@@ -1,10 +1,14 @@
-name=UIPEthernet
-author=ntruchsess
-email=Norbert Truchsess <norbert.truchsess@t-online.de>
-sentence=Ethernet library for ENC28J60
-paragraph=implements the same API as stock Ethernet-lib. Just replace the include of Ethernet.h with UIPEthernet.h
-url=https://github.com/ntruchsess/arduino_uip
-architectures=avr
-version=1.04
+name=UltratronicsEthernet
+author=Various (see AUTHORS file for details)
+email=techsupport@reprapworld.com
+maintainer=Bart Meijer <techsupport@reprapworld.com>
+sentence=Ethernet library for ENC424J600
+paragraph=Library to support the ENC424J600 chip.
+url=https://github.com/brupje/UltratronicsEthernet
+architectures=*
+category=Communication
+version=1.0.0
 dependencies=
-core-dependencies=arduino (>=1.5.0)
+
+
+
